--- a/Final_Project_IBM_Applied_Data_Science_Capstone.ipynb
+++ b/Final_Project_IBM_Applied_Data_Science_Capstone.ipynb
@@ -69,9 +69,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'SS2DCCVHW3ZMK3HYPBSS1TQU3MMTHTVPVZ2CLF0AZHTGECOK' # Foursquare ID\n",
-    "CLIENT_SECRET = 'BMV3QEC3ZHW13S3BNKQVONLDVRXWTLYIP0BIEPJ51PVLTMOV' # Foursquare Secret\n",
-    "ACCESS_TOKEN = 'ILKUZ2UM41UMBTMAV1QFL2UOIPCB1FTCDYA5PK4ZAQDWK3F3' # FourSquare Access Token\n",
+    "CLIENT_ID = ' ' # Foursquare ID\n",
+    "CLIENT_SECRET = ' ' # Foursquare Secret\n",
+    "ACCESS_TOKEN = ' ' # FourSquare Access Token\n",
     "VERSION = '20200204'\n",
     "LIMIT = 30"
    ]
